# qt-template

./: BuildApplication.bat  CMakeLists.txt  FastBuild.bat  FullBuild.bat  LICENSE  QT_Cookbook.md  README.md  resources.qrc
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
